# dashboard_ventas

./: .gitignore  BRIEF_FASE2.md  README.md  pyproject.toml
config/: contrato.yaml
src/dashboard/: app.py
src/db/: carga.py  schema.py
src/engine/: comisiones.py  config_contrato.py  fiscal.py  insights.py  objetivo.py  proyeccion.py  rappel.py  reconciliacion.py
src/ingestion/: factura_pdf.py  facturacion.py  liquidacion.py  polizas.py  utils.py
tests/: test_comisiones.py  test_dashboard_smoke.py  test_dashboard_subida_ficheros.py  test_fiscal.py  test_ingestion.py  test_insights.py  test_objetivo.py  test_proyeccion.py  test_rappel.py  test_resumen_mensual.py
tests/fixtures/: facturacion_fin_de_mes.csv  facturacion_sample.csv  liquidacion_sample.csv  polizas_fin_de_mes.csv  polizas_sample.csv
