[project]
name = "dashboard-ventas"
version = "0.1.0"
description = "Panel personal de comisiones y rappel para agente exclusivo de seguros de salud"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.38",
    "pandas>=2.2",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "pdfplumber>=0.11",
    "plotly>=5.23",
    "chardet>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
